<?xml version="1.0"?>
<package>
	<name>stomp_moveit</name>
	<version>0.0.0</version>
	<description>The stomp_moveit package</description>

	<maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
	<license>Apache 2.0</license>
	<author email="jrgnichodevel@gmail.com">Jorge Nicho</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>moveit_ros_planning</build_depend>
	<build_depend>moveit_core</build_depend>
	<build_depend>stomp_core</build_depend>
	<build_depend>pluginlib</build_depend>
	<build_depend>cmake_modules</build_depend>

	<run_depend>moveit_ros_planning</run_depend>
	<run_depend>moveit_core</run_depend>
	<run_depend>stomp_core</run_depend>
	<run_depend>pluginlib</run_depend>
	<run_depend>cmake_modules</run_depend>


	<!-- The export tag contains other, unspecified, tags -->
  <export>
    <!--<moveit_core plugin="${prefix}/stomp_moveit_plugin.xml"/>-->
    <stomp_moveit plugin="${prefix}/cost_function_plugins.xml"/>
    <stomp_moveit plugin="${prefix}/trajectory_filter_plugins.xml"/>
  </export>
</package>
