<?xml version="1.0"?>
<package>
  <name>constrained_ik</name>
  <version>0.0.0</version>
  <description>Constraint-based IK solver.  Good for high-DOF robots or underconstrained tasks.</description>

  <author email="clewis@swri.org">Chris Lewis</author>
  <author email="jzoss@swri.org">Jeremy Zoss</author>
  <maintainer email="jzoss@swri.org">Jeremy Zoss, SwRI</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/constrained_ik</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>gtest</test_depend>

  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
